force-app/main/default/objects/Client_Interview__c/Client_Interview__c.object-meta.xml
<CustomObject>
    <description>This object creates only client information based.</description>
    <label>Client Interview</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Client Interview Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>