force-app/main/default/objects/Client_Interview__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <description>You type your comments</description>
    <label>Additional Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>