force-app/main/default/objects/Client_Interview__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client Interviews</description>
    <label>Candidate</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Client Interviews</relationshipLabel>
    <relationshipName>Client_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>