force-app/main/default/objects/Client_Interview__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client information to blow the massage.</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lookup(Employee)</relationshipLabel>
    <relationshipName>Client_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>