force-app/main/default/objects/Client_Interview__c/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <description>Interview information</description>
    <label>Interview Date</label>
    <type>Date</type>
</CustomField>