force-app/main/default/objects/Client_Interview__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status in the user</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interview Scheduled</fullName>
            </value>
            <value>
                <fullName>1st Round Pass</fullName>
            </value>
            <value>
                <fullName>2nd Round Pass</fullName>
            </value>
            <value>
                <fullName>3rd Round Pass</fullName>
            </value>
            <value>
                <fullName>4th Round Pass</fullName>
            </value>
            <value>
                <fullName>Final Round Pass</fullName>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>