force-app/main/default/objects/Client_Interview__c/fields/Supported_By__c.field-meta.xml
<CustomField>
    <fullName>Supported_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Supported</description>
    <label>Supported By</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Lookup(Employee)</relationshipLabel>
    <relationshipName>Client_Interviews1</relationshipName>
    <type>Lookup</type>
</CustomField>